Add info about using MM algo on JDK 17+